spring.css
:root {

    /*********************** HTML export page configuration HTML导出页面配置 ***************************
     **************************************************************************************************/
    /* Font size 字体大小 */
    --font-size: 16px;

    /* Max width 最大宽度 */
    --max-width: 1080px;

    /* Margin 外边距 */
    --margin: 0 auto;

    /* Padding 内边距 */
    --padding: 0 20px;

    /********************************* Text alignment 文本对齐方式 *************************************
     **************************************************************************************************
     * - left:         Align Left         左对齐 
     * - right:        Align right        右对齐
     * - center:       Align center       居中对齐
     * - justify:      Align justify      两端对齐
     * - justify-all:  Align justify-all  全部两端对齐
     * - start:        Align start        行首对齐
     * - end:          Align end          行尾对齐
     **************************************************************************************************/
    --text-align: justify;

    /************************* Interactive effects configuration 交互效果配置 ************************
     **************************************************************************************************
     ** 1.To use interactive effects, first set --use-dynamic-effect` to 1, Then adjust other 
     **   configuration items as needed.
     ** 2.To turn off all interactive effects, set `--use-dynamic-effect` to 0
     **                                        set `--list-ol-text-style` to italic
     *
     ** 1.若要使用交互效果, 请先将 `--use-dynamic-effect` 设置为 1, 然后根据需要调整其他配置项
     ** 2.若要关闭全部交互效果, 请将 `--use-dynamic-effect` 设置为 0  
     **                            `--list-ol-text-style` 设置为 italic
     *
     * 其余配置项请根据需要自行配置
     * - 0: Close 关闭
     * - 1: Open 开启
     **************************************************************************************************/
    /* Use/Close interactive effect 使用/关闭交互效果 */
    --use-dynamic-effect: 1;

    /* H1 interactive effect 一级标题交互效果 */
    --h1-hover-effect: 1;

    /* H2 interactive effect 二级标题交互效果 */
    --h2-after-effect: 1;

    /* H3 H4 H5 H6 interactive effect 三,四,五,六级标题交互效果 */
    --h3-6-hover-effect: 1;

    /* Paragraph interactive effect 段落交互效果 */
    --p-hover-effect: 1;

    /* Image interactive effect 图片交互效果 */
    --img-hover-effect: 1;

    /* Blockquote interactive effect 引用块交互效果 */
    --blockquote-hover-effect: 1;
    
    /* Alert interactive effect 提示框交互效果 */
    --alert-hover-effect: 1;
    
    /* Strong text interactive effect 粗体文本交互效果 */
    --strong-hover-effect: 1;

    /* Italic text interactive effect 斜体文本交互效果 */
    --em-hover-effect: 1;

    /* Underline interactive effect 下划线交互效果 */
    --u-hover-effect: 1;

    /* Marked text interactive effect 高亮文本交互效果 */
    --mark-hover-effect: 1;

    /* Deleted text interactive effect 删除线交互效果 */
    --del-hover-effect: 1;

    /* Inline code block interactive effect 内联代码块交互效果 */
    --code-hover-effect: 1;

    /* Code block interactive effect 代码块交互效果 */
    --fence-hover-effect: 1;
    
    /* List interactive effect 列表交互效果
     * The following two values ​​need to be changed synchronously
     * 下面两个值需同步更改 0-italic or 1-normal */
    --list-marker-effect: 1;
    --list-ol-text-style: normal;
    
    /* Divider interactive effect 分割线交互效果 */
    --hr-hover-effect: 1;
    
    /* Table interactive effect 表格交互效果 */
    --table-hover-effect: 1;

    /************************************** Color Scheme 颜色配置 **************************************
     **************************************************************************************************/

}

html {
    font-size: var(--font-size);
    max-width: var(--max-width);
    margin: var(--margin);
    padding: var(--padding);
}

html,
body {
    font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, "PingFang SC", "Microsoft YaHei", sans-serif;

    text-align: var(--text-align);

    overflow-x: hidden;
    color: #282c34;
    -webkit-font-smoothing: antialiased;
}

content #write {
    background-color: #fefefe;
    max-width: 90%;
    margin: 0 auto;
    padding-bottom: 7.5rem;
}

content #write p {
    word-spacing: 0.1rem;
    line-height: 1.9rem;
}

content #write ol li {
    padding-left: 0.5rem;
}

content #write>h1:first-child {
    font-weight: normal;
}

content #write>h5.md-focus:before {
    top: 2px;
}

::-moz-selection {
    background-color: #def2e8;
}

::selection {
    background-color: #def2e8;
}

/* h1-h3 */
#write h1,
#write h2,
#write h3 {
    font-style: normal;
}

#write h1,
#write h2 {
    text-align: center;
    margin-top: 2rem;
    margin-bottom: 1rem;
}

#write h1 {
    font-size: 2.4rem;
    position: relative;
    overflow: hidden;
    transition: transform 0.4s ease;
}

#write h1:before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(90deg, rgba(152, 251, 152, 0), #E8F4EE, rgba(152, 251, 152, 0));
    transition: transform 0.4s ease;
    transform: scaleX(0);
    transform-origin: center;
    z-index: -1;
    display: calc(var(--h1-hover-effect) * var(--use-dynamic-effect));
}

#write h1:hover {
    transform: scale(calc(1 + 0.1 * var(--h1-hover-effect) * var(--use-dynamic-effect)));
}

#write h1:hover:before {
    transform: scaleX(calc(var(--h1-hover-effect) * var(--use-dynamic-effect)));
}

#write h2 {
    font-size: 2rem;
    position: relative;
    padding-bottom: 0.5rem;
    font-weight: bold;
}

#write h2:after {
    content: "";
    display: block;
    width: 30rem;
    height: 2.5px;
    margin: 0.5rem auto 0;
    background: linear-gradient(90deg, rgba(106, 158, 69, 0), #3ea174, rgba(106, 158, 69, 0));
    border-radius: 10px;
    transform: scaleX(0);
    transition: transform 0.4s ease, background 0.4s ease;
}

#write h2:hover:after {
    transform: scaleX(calc(1 * var(--h2-after-effect) * var(--use-dynamic-effect)));
}
/* ... */

